--- a/server/conf/config.yaml
+++ b/server/conf/config.yaml
@@ -11,6 +11,8 @@ model:
   lora:
     peft_lora_r: 32
     peft_lora_alpha: 64
+  is_finetuned: False
+  peft_path: "/results/peft_5/"
 
 train:
   num_rounds: ${num_rounds}
